--- a/package.json
+++ b/package.json
@@ -6,5 +6,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Igor Khotin & Co.",
-  "license": "zlib"
+  "license": "Zlib"
 }
