--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "collider.mix",
-  "version": "0.0.5",
-  "description": "collider.jam supervisor and core mods",
+  "version": "0.0.6",
+  "description": "collider.jam supervisor and core mix",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
